[gd_scene load_steps=3 format=3 uid="uid://dueeaaacl7277"]

[ext_resource type="Script" path="res://teleport_area.gd" id="1_iaq4k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_keukr"]

[node name="TeleportArea" type="Area2D"]
collision_mask = 3
script = ExtResource("1_iaq4k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_keukr")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
